# backends

./: .gitignore  .gitmodules  CMakeLists.txt  api.h  app.h  camera.h  framebuffer.h  inspector.h  instance.h  light.h  math_api.h  mesh.h  model.h  platform.h  pose.cpp  pose.h  shader.h  texture.h  timer.h
OpenGL/: camera.cpp  framebuffer.cpp  graphics_api.h  light.cpp  mesh.cpp  model.cpp  platform.cpp  shader.cpp  texture.cpp  timer.cpp
Vulkan/: main.cpp  platform.cpp  platform.h  shader.cpp  shader.h
_unit_test/: CMakeLists.txt  test_platform.cpp
assets/model/: background.mtl  desk.mtl  sakura.mtl
assets/scene/: cube.txt  default.json  desk.txt  miku.txt  playground.txt  stage.txt
assets/shader/glsl/: color_shader_vertex.glsl  default_2D_fragment.glsl  default_2D_vertex.glsl  default_instanced_shader_fragment.glsl  default_instanced_shader_vertex.glsl  default_line_shader_instanced_fragment.glsl  default_line_shader_instanced_vertex.glsl  default_line_shader_vertex.glsl  default_shader_fragment.glsl  default_shader_vertex.glsl  default_simple_shader_fragment.glsl  default_simple_shader_vertex.glsl  screen_fragment.glsl  texture_shader_fragment.glsl
assets/shader/glsl/volume/: volume_fragment.glsl
experimental/: CMakeLists.txt
experimental/src/: CMakeLists.txt
experimental/src/bvh/: Bvh.cpp  Bvh.h  BvhTranslator.h
experimental/src/job/: Runnable.h  RunnableThread.h  TaskThread.cpp  TaskThread.h  TaskThreadPool.cpp  TaskThreadPool.h  ThreadEvent.h  ThreadManager.h
experimental/src/math/: Math.cpp  Quat.h  Vector2.h  Vector4.h
experimental/src/parser/: GLBLoader.h
objects/: arrow.cpp  arrow.h  bunny.cpp  bunny.h  cube.cpp  cube.h  cup.cpp  cup.h  object3D.cpp  object3D.h  plane.h  sphere.cpp  sphere.h
pathtracer/: CMakeLists.txt
pathtracer/src/bvh/: BvhTranslator.cpp  SplitBvh.cpp  SplitBvh.h
pathtracer/src/core/: Camera.cpp  Camera.h
pathtracer/src/job/: RunnableThread.cpp  ThreadEvent.cpp  ThreadManager.cpp  ThreadTask.h
pathtracer/src/math/: Axis.h  Bounds3D.h  Math.h  Matrix4x4.h  Vector3.h
pathtracer/src/parser/: GLBLoader.cpp
tutorials/: CMakeLists.txt  platform.cpp
unit_test/: mesh.cpp
volume_render/: main.cpp  volume_render.cpp  volume_render.h
